# Brainrot-List-Ingame

./: .gitignore  CMakeLists.txt  README.md  about.md  changelog.md  logo.pdn  mod.json
.github/workflows/: multi-platform.yml  relwithdebinfo.yml
images/: Difficulty_Brl.pdn  mapPack.pdn  normal_face_with_demon.pdn  normal_face_with_demon_text.pdn
src/: GetData.hpp  main.cpp  url.hpp
src/CustomSearch/: BrType.hpp  Creatorlayer.cpp  CustomSearch.hpp  Packlist.hpp
src/Demon/: LevelCell.cpp  LevelInfoLayer.cpp
